complete authen and register api
